changed 'top' to -102px for 'body.not-front #page' selector on IE8 to prevent gap below staffing nav and above body content

--- a/css/ie8.css
+++ b/css/ie8.css
@@ -14,5 +14,5 @@
  */
 
 body.not-front #page {
-	top: -101px;
+	top: -102px;
 }
